--- a/construccionNassar/styles.css
+++ b/construccionNassar/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("fondo.jpeg");
+    background-image: url("nassar.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
